--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -38,5 +38,17 @@ main {
     $f10: 0.625rem;*/
 
 
+.skip-links {
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
+    transform: translateX(-100vw);
+    padding: 1rem;
+    color: $white;
+    font-size: 1.2rem;
+    background: $primary;
 
-
+    &:focus {
+        transform: translateX(0);
+    }
+}
