--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -19,7 +19,9 @@ main {
 /*Colors************************/
     $primary: #901C1C;
     $secondary: #D3573C;
+    $tertiary: #DB8876;
     $black: #525252;
+    $black-darker: #000000;
     $white: #FFFFFF;
     $grey: #FAFAFA;
 
