--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,8 @@
 @import 'base';
 @import 'hero-banner';
-@import "gallery";
-@import "counter";
-@import "filters";
-@import "select";
-@import "contact";
+@import 'gallery';
+@import 'counter';
+@import 'filters';
+@import 'select';
+@import 'contact';
+@import 'lightbox';
