--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -25,6 +25,7 @@ main {
     $black-form: #312E2E;
     $white: #FFFFFF;
     $grey: #FAFAFA;
+    $grey-darker: #757575;
 
 
 /*Fonts************************/
@@ -36,9 +37,10 @@ main {
     $f24: 1.5rem;
     $f20: 1.25rem;
     $f18: 1.125rem;
-   /* $f14: .875rem;
+   /* $f14: .875rem;*/
     $f13: 0.82rem;
-    $f10: 0.625rem;*/
+    $f10: 0.625rem;
+    $f9:  0.563rem;
 
 
 .skip-links {
