--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,8 @@
 @import 'base';
+@import 'header';
+@import 'avatar';
+@import 'photographer-card';
+@import 'home';
 @import 'hero-banner';
 @import 'gallery';
 @import 'counter';
