--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -5,9 +5,12 @@
     top: 0;
     left: 0;
     width: 100%;
-    min-height: 100vh;
-    padding: 3rem 0;
     display: none;
+
+    &.modal-from {
+        min-height: 100vh;
+        padding: 3rem 0;
+    }
 
     form {
         background: $tertiary;
