--- a/src/scss/lightbox.scss
+++ b/src/scss/lightbox.scss
@@ -1,15 +1,19 @@
 .modal-media {
     background: $white;
-    padding: 62px;
-    width: 100vw;
-    height: 100vh;
+    max-width: 100vw;
+    max-height: 100vh;
 
     article {
+        padding: 62px 124px;
         margin: 0 auto;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
         
         .media-container {
-            width: 100%;
-            height: 100%;
+           width: 100%;
+           max-height: 100%;
 
             img {
                 object-fit: contain;
@@ -18,7 +22,17 @@
             }
             video {
                 width: 100%;
-                height: 100%;
+                aspect-ratio: 1920 / 1080;
+            }
+
+            img,
+            video {
+                transition: transform .3s ease-in-out;
+                transform: translateX(100vh);
+
+                &.media-current {
+                    transform: translate(0);
+                }
             }
         }
 
@@ -29,4 +43,29 @@
         }
     }
 
+    .modal-button {
+        position: absolute;
+        top: 50%;
+        cursor: pointer;
+        border: none;
+        background: none;
+
+        svg {
+            pointer-events: none;
+            path{
+                fill: $primary;
+            }
+        }
+
+        &.left-button {
+            left: 1rem;
+        }
+        &.right-button {
+            right: 1rem;
+        }
+        &.close-button {
+            top: 3rem;
+            right: 1rem;
+        }
+    }
 }
