--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -7,7 +7,7 @@
     width: 100%;
     display: none;
 
-    &.modal-from {
+    &.modal-form {
         min-height: 100vh;
         padding: 3rem 0;
     }
@@ -23,14 +23,20 @@
         flex-direction: column;
         position: relative;
 
-        svg {
+        .close-modal {
             position: absolute;
             top: 35px;
             right: 35px;
-            fill: $white;
             cursor: pointer;
-        }
+            border: none;
+            background: none;
 
+            svg {
+                fill: $white;
+                pointer-events: none;
+            }
+        }
+        
         h1,
         h2 {
             font-size: $f64;
@@ -59,7 +65,7 @@
             width: 100%;
             min-height: 170px;
         }
-        button {
+        button:not(.close-modal) {
             color: $white;
             background-color: $primary;
             border-radius: 5px;
