--- a/src/scss/lightbox.scss
+++ b/src/scss/lightbox.scss
@@ -13,7 +13,7 @@
         
         .media-container {
            width: 100%;
-           max-height: 100%;
+           height: 100%;
 
             img {
                 object-fit: contain;
@@ -22,17 +22,8 @@
             }
             video {
                 width: 100%;
+                height: 100%;
                 aspect-ratio: 1920 / 1080;
-            }
-
-            img,
-            video {
-                transition: transform .3s ease-in-out;
-                transform: translateX(100vh);
-
-                &.media-current {
-                    transform: translate(0);
-                }
             }
         }
 
@@ -63,7 +54,7 @@
         &.right-button {
             right: 1rem;
         }
-        &.close-button {
+        &.close-modal {
             top: 3rem;
             right: 1rem;
         }
