--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -60,10 +60,14 @@
             height: 68px;
             border: none;
             border-radius: 5px;
+            padding-left: 21px;
+            font-size: $f36;
         }
         textarea {
             width: 100%;
             min-height: 170px;
+            padding-left: 21px;
+            font-size: $f36;
         }
         button:not(.close-modal) {
             color: $white;
