--- a/src/scss/gallery.scss
+++ b/src/scss/gallery.scss
@@ -11,9 +11,10 @@
             margin-bottom: 2rem;
             width: 350px;;
     
-            .img-container {
+            .lightbox-link {
                 width: 100%;
                 height: 300px;
+                display: block;
     
                 img {
                     object-fit: cover;
