--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -82,5 +82,14 @@
             font-size: $f20;
             margin-top: 26px;
         }
+
+        .error-message {
+            margin-top: .5rem;
+            padding: .5rem;
+            font-weight: bold;
+            background-color: red;
+            color: $white;
+            border-radius: 5px;
+        }
     }
 }
