--- a/src/scss/lightbox.scss
+++ b/src/scss/lightbox.scss
@@ -59,4 +59,26 @@
             right: 1rem;
         }
     }
+
+    .player {
+        position: relative;
+        height: 100%;
+        width: 100%;
+
+        .controls {
+            position: absolute;
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+    
+            button {
+                margin-right: .5rem;
+                background: $primary;
+                color: $white;
+                border: none;
+                padding: .5rem;
+                cursor: pointer;
+            }
+        }
+    }
 }
