Load player when video on open modal from video card

--- a/src/scss/select.scss
+++ b/src/scss/select.scss
@@ -30,7 +30,7 @@
 
                 &::after {
                     position: absolute;
-                    content: url("../../assets/icons/arrow.png");
+                    content: url("../../assets/icons/arrow.svg");
                     top: 50%;
                     right: 1rem;
                     transform: translateY(-50%)  rotate(0);
